# nrsc5_gui

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  HybridRadio.cpp  HybridRadio.h  Modulation.h  RadioChannel.h
lib/audio/: Device.cpp  Device.h  HostApi.h  PortAudioCpp.cpp  PortAudioCpp.h
lib/audio/stream/: Stream.cpp  Stream.h  StreamBuffer.h  StreamOutputPush.cpp  StreamParameters.h  StreamParametersDirectionSpecific.h
lib/db/: AsyncQuery.cpp  AsyncQuery.h  ConnectionManager.cpp  ConnectionManager.h
lib/dsp/: BandpassFilter.cpp  BandpassFilter.h  FFTProcessor.cpp  FFTProcessor.h  FirdecimQ15.h  IQBalance.cpp  IQBalance.h  LowpassFilter.cpp  LowpassFilter.h  QuadratureDemod.cpp  QuadratureDemod.h  Resampler.cpp  Resampler.h
lib/dsp/filter/: Firdes.cpp  Firdes.h  IirFilter.cpp  IirFilter.h  Window.cc  Window.h
lib/fm/: FMDeemph.cpp  FMDeemph.h  FMDemod.cpp  FMDemod.h  FMPilotPhaseLock.cpp  FMPilotPhaseLock.h  FMStereo.cpp  FMStereo.h
lib/images/: ImageProviderPriorityManager.cpp  ImageProviderPriorityManager.h  StationImageProvider.cpp  StationImageProvider.h
lib/images/providers/: IImageProvider.h  LotImageProvider.cpp  LotImageProvider.h
lib/nrsc5/: LotManager.cpp  LotManager.h  Station.cpp  Station.h
lib/threads/: GuiEvent.h  GuiSyncThread.h
lib/utils/: DataBuffer.h  Error.h  Log.h  Math.h  MessageQueue.h  RingBuffer.cpp  RingBuffer.h  Span.h  StringUtils.cpp  StringUtils.h  Time.h
src/: AppState.h  Application.cpp  Application.h  CMakeLists.txt  HybridRadio.cpp  HybridRadio.h  HybridTuner.cpp  HybridTuner.h  Main.cpp  Modulation.h  RadioChannel.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  HostApi.cpp  PortAudioCpp.cpp  PortAudioCpp.h  SampleDataFormat.h  SampleFormat.h
src/audio/stream/: StreamBuffer.cpp  StreamOutputPush.h  StreamParameters.cpp  StreamParametersDirectionSpecific.cpp
src/controllers/: HybridRadio.cpp  HybridRadio.h  RadioController.cpp  RadioController.h  StationInfoManager.cpp  StationInfoManager.h
src/delegates/: BasicTextDelegate.cpp  BasicTextDelegate.h  ChannelDelegate.cpp  ChannelDelegate.h
src/display/: RadioInfoDisplay.cpp  RadioInfoDisplay.h  RadioInfoDisplay.ui  StationInfoPanel.cpp  StationInfoPanel.h
src/dsp/: ArbResampler.cpp  ArbResampler.h  FirFilter.h  FirdecimQ15.cpp  Firdes.cpp  Firdes.h  IFilterStream.h  Window.cpp  Window.h
src/dsp/resampler/: ArbResampler.h  IFilterBlock.h  IFilterStream.h
src/dsp/utils/: HistoryBuffer.h
src/gui/: AssetsManager.cpp  AssetsManager.h  HybridAudio.cpp  HybridAudio.h  ImageManager.cpp  ImageManager.h  MainWindow.cpp  MainWindow.h  SDLWindow.cpp  SDLWindow.h  TextureAsset.cpp  TextureAsset.h  UISession.cpp  UISession.h  Util.h
src/gui/backends/: GlfwImpl.cpp  GlfwImpl.h
src/gui/controllers/: Events.h  FavoritesController.cpp  FavoritesController.h  SDRController.cpp  SDRController.h  StationController.cpp  StationController.h
src/gui/image/: Image.h  PNGDecoder.cpp  PNGDecoder.h  SVGDecoder.cpp  SVGDecoder.h
src/gui/image_decoders/: ImageBuffer.h  ImageDecoder.cpp  JPEGDecoder.cpp  PNGDecoder.h
src/gui/imgui/: Imgui.cpp  Imgui.h
src/gui/managers/: AssetsManager.cpp  AssetsManager.h  EventsDispatcher.cpp  EventsDispatcher.h  ImageManager.cpp  ImageManager.h  SessionManager.cpp  SessionManager.h  ThemeManager.cpp  ThemeManager.h
src/gui/panels/: DeviceList.cpp  DeviceList.h  DockAudioPanel.cpp  DockAudioPanel.h  DockFavoritesPanel.cpp  DockFavoritesPanel.h  DockInputPanel.cpp  DockInputPanel.h  DockStationPanel.cpp  DockStationPanel.h  DockTunePanel.cpp  DockTunePanel.h  SDRSettings.cpp  SDRSettings.h
src/gui/platform/: IGPUContext.h  ITexture.h
src/gui/utils/: Cache.h  Icon.h  (+2 more)
src/hybrid/: HybridController.cpp  HybridController.h  HybridDecoder.cpp  HybridDecoder.h  HybridInput.cpp  HybridInput.h  HybridMetadata.cpp  HybridMetadata.h  HybridReceiver.cpp  HybridReceiver.h  HybridSession.cpp  HybridSession.h  HybridSessionManager.cpp  HybridSessionManager.h  HybridState.h
src/images/: ImageData.h  ImageDecoder.h  ImageProviderPriorityManager.cpp  JPEGDecoder.h  PNGDecoder.cpp  SVGDecoder.cpp  SVGDecoder.h  StationImageProvider.cpp  StationImageProvider.h
src/input/: RadioInput.h  SDRHost.cpp  SDRHost.h  SDRInput.cpp  SDRInput.h
src/models/: ChannelModel.cpp  ChannelModel.h  FavoriteList.cpp  FavoriteList.h  FavoriteModel.cpp  FavoriteModel.h  LinkedChannelModel.cpp  LinkedChannelModel.h  TunerDevicesModel.cpp  TunerDevicesModel.h
src/nrsc5/: Decoder.cpp  Decoder.h  LotManager.cpp  LotManager.h  Processor.cpp  Processor.h  SDRProcessor.cpp  SDRProcessor.h  Station.cpp  Station.h
src/pages/: LoadingPage.cpp  LoadingPage.h  RadioDashboard.cpp  RadioDashboard.h  RadioPage.cpp  RadioPage.h  SettingsPage.cpp  SettingsPage.h
src/settings/: AboutPage.cpp  AboutPage.h  TunerPage.cpp  TunerPage.h
src/sql/: Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  Database.cpp  Database.h  DatabaseManager.cpp  DatabaseManager.h  LotTable.cpp  LotTable.h  PreparedStatement.h  SchemaTable.cpp  SchemaTable.h  SettingsTable.cpp  SettingsTable.h  SqliteHelper.h  Table.h
src/themes/: ThemeManager.cpp  ThemeManager.h
src/threads/: GuiEvent.h  GuiSyncThread.cpp
src/utils/: Band.h  DataBuffer.h  Error.h  Frame.h  Image.cpp  Image.h  Log.cpp  Log.h  MessageQueue.cpp  RingBuffer.cpp  RingBuffer.h  StringUtils.h  StylingText.cpp  StylingText.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  Time.h  TokenParser.h  Types.h
src/views/: RadioControlPanelView.cpp  RadioControlPanelView.h  RadioMainView.cpp  RadioMainView.h  SettingsView.cpp  SettingsView.h
src/widgets/: AnimatedStackedWidget.cpp  AnimatedStackedWidget.h  CapsLabelAlign.cpp  CapsLabelAlign.h  ClickableQLabel.cpp  ClickableQLabel.h  LineHeader.cpp  LineHeader.h  ListViewHeader.cpp  ListViewHeader.h  RoundButton.cpp  RoundButton.h  StationFramePanel.cpp  StationFramePanel.h
src/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/: CMakeLists.txt  Cache.cpp  Database.cpp  HybridTest.cpp  NRSC5.cpp  Radio.cpp  ResamplerTest.cpp  Table.cpp
(+87 files in other folders)
